# noir

./: CHANGELOG.md  Cargo.toml  flake.nix
.github/workflows/: test-integration.yml  wasm.yml
compiler/fm/src/: file_reader.rs  lib.rs
compiler/source-resolver/: package.json
compiler/wasm/: package.json
compiler/wasm/src/: compile.rs
tooling/nargo/src/: lib.rs
tooling/noir_js/: package.json
tooling/noir_lib/: Cargo.toml  package.json
tooling/noir_lib/src/: lib.rs
tooling/noir_lib/wit/: noir_lib.wit
tooling/noirc_abi_wasm/: package.json
